--- a/PeraKasa/app/src/main/res/layout/activity_main.xml
+++ b/PeraKasa/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,58 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <Button
+            android:text="Giriş"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/btnGiris"
+            android:gravity="center"
+            android:layout_marginTop="53dp"
+            app:layout_constraintTop_toBottomOf="@+id/pwSifre" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
+    <TextView
+            android:text="Pera Kasa"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvBaslik"
+            android:textSize="30sp"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="29dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:layout_marginBottom="311dp"
+            app:layout_constraintBottom_toTopOf="@+id/pbIslemCubugu"/>
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/ptKullaniciAdi"
+            android:hint="Kullanıcı Adı"
+            android:layout_marginTop="128dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/pwSifre"
+            android:hint="Şifre"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/ptKullaniciAdi" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="302dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/pbIslemCubugu"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/tvBaslik"
+            android:layout_marginBottom="283dp"/>
 
 </android.support.constraint.ConstraintLayout>
