--- a/PeraKasa/app/src/main/res/layout/activity_main.xml
+++ b/PeraKasa/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,8 @@
             android:layout_marginTop="29dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:layout_marginBottom="311dp"
-            app:layout_constraintBottom_toTopOf="@+id/pbIslemCubugu"/>
+            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
+    />
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -54,11 +54,11 @@
             android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
     <ProgressBar
             style="?android:attr/progressBarStyle"
-            android:layout_width="302dp"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/pbIslemCubugu"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/tvBaslik"
-            android:layout_marginBottom="283dp"/>
+            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="42dp"
+            app:layout_constraintTop_toBottomOf="@+id/btnGiris"/>
 
 </android.support.constraint.ConstraintLayout>
