--- a/PeraKasa/app/src/main/res/layout/activity_main.xml
+++ b/PeraKasa/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
     <Button
-            android:text="Giriş"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnGiris"
-            android:gravity="center"
-            android:layout_marginTop="53dp"
-            app:layout_constraintTop_toBottomOf="@+id/pwSifre" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
+        android:text="Giriş"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnGiris"
+        android:gravity="center"
+        android:layout_marginTop="53dp"
+        app:layout_constraintTop_toBottomOf="@+id/pwSifre" app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
+
     <TextView
-            android:text="Pera Kasa"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvBaslik"
-            android:textSize="30sp"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:layout_marginTop="29dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
-    />
+        android:id="@+id/tvBaslik"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="32dp"
+        android:gravity="center"
+        android:text="Pera Kasa"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/ptKullaniciAdi"
-            android:hint="Kullanıcı Adı"
-            android:layout_marginTop="128dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
+        android:id="@+id/ptKullaniciAdi"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="32dp"
+        android:ems="10"
+        android:hint="Kullanıcı Adı"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/pwSifre"
-            android:hint="Şifre"
-            android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@+id/ptKullaniciAdi" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
+        android:id="@+id/pwSifre"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="32dp"
+        android:ems="10"
+        android:hint="Şifre"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ptKullaniciAdi" />
     <ProgressBar
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/pbIslemCubugu"
-            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="42dp"
-            app:layout_constraintTop_toBottomOf="@+id/btnGiris"/>
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" android:id="@+id/pbIslemCubugu"
+        app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="42dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnGiris"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="Muhittin Darı"
+        android:textAlignment="center"
+        android:textColor="#FFAB00"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btnGiris"
+        app:layout_constraintStart_toStartOf="@+id/btnGiris" />
 
 </android.support.constraint.ConstraintLayout>
